Update changelog so far

--- a/docs/crypto-ise.changelog.tex
+++ b/docs/crypto-ise.changelog.tex
@@ -1,4 +1,12 @@
 
+\paragraph{Draft-3}
+\begin{itemize}
+\item Add halfword varient of the SCATTER and GATHER instruction.
+\item Update table of encoding layouts with all different varients.
+\item Add BOP.cr instruction, and make XOR/AND/OR.cr instructions
+    alias specific encodings of this BOP.cr.
+\end{itemize}
+
 \paragraph{Draft-2}
 \begin{itemize}
 \item Added high/low nibble twiddle instructions TWID.HN,TWID.LN.
