--- a/docs/crypto-ise.introduction.tex
+++ b/docs/crypto-ise.introduction.tex
@@ -23,6 +23,8 @@ The key pieces of functionality the ISE aims to provide are:
 \item Flexible support for intra-word byte, halfword and nibble
       permutation.
 \item Multi-precision integer arithmetic.
+\item Support for accelerating Bit-sliced implementations of cryptographic
+    algorithms.
 \end{itemize}
 
 This document {\em is} a specification for an ISE. It {\em is not} an
