--- a/docs/references.bib
+++ b/docs/references.bib
@@ -1,10 +1,9 @@
-
-@inproceedings{jung2000register,
-  title={A register file with transposed access mode},
-  author={Jung, Yoochang and Berg, Stefan G and Kim, Donglok and Kim, Yongmin},
-  booktitle={Computer Design, 2000. Proceedings. 2000 International Conference on},
-  pages={559--560},
-  year={2000},
-  organization={IEEE}
+@inproceedings{grabher2008light,
+  title={Light-weight instruction set extensions for bit-sliced cryptography},
+  author={Grabher, Philipp and Gro{\ss}sch{\"a}dl, Johann and Page, Dan},
+  booktitle={International Workshop on Cryptographic Hardware and Embedded Systems},
+  pages={331--345},
+  year={2008},
+  organization={Springer}
 }
 
