--- a/docs/crypto-ise.specification.tex
+++ b/docs/crypto-ise.specification.tex
@@ -758,24 +758,8 @@ is used for the multi-precision arithmetic instructions.
 \begin{bytefield}[endianness=big]{32}
 \bitheader{0-31}               \\
 
-  \BB{12}{imm[11:0]}
-& \BB{1}{h}
-& \BB{4}{rs1  }
-& \BB{3}{f3}
-& \BB{1}{b}
-& \BB{4}{rd   }
-& \BB{8}{\encopcode}
-& \BH{15}{I-type} \\
-
-  \BB{7}{imm[11:5]}
-& \BB{1}{b}
-& \BB{4}{rs2  }
-& \BB{1}{h}
-& \BB{4}{rs1  }
-& \BB{3}{f3}
-& \BB{5}{imm[4:0]}
-& \BB{8}{\encopcode}
-& \BH{15}{S-type} \\
+\BB{11}{imm[10:0]}  &\BB{1}{b}& \BB{5}{rs1}& \BB{3}{f3 } &\BB{1}{h}& \BB{4}{rd}& \BB{8}{\encopcode}& \BH{15}{I-type} \\
+\BB{7}{imm[10:5]}   &\BB{1}{b}& \BB{4}{rs2}& \BB{5}{rs1} &\BB{3}{f3 }&\BB{1}{h}&\BB{4}{imm[3:0]}& \BB{8}{\encopcode}& \BH{15}{S-type} \\
 
   \BB{2}{b0}
 & \BB{2}{b0}
