--- a/docs/crypto-ise.changelog.tex
+++ b/docs/crypto-ise.changelog.tex
@@ -3,6 +3,13 @@
 \begin{itemize}
 \item Add halfword varient of the SCATTER and GATHER instruction.
 \item Update table of encoding layouts with all different varients.
+\item Fixed encoding widths of {\tt RS1} fields for load/store
+    instructions. They are now 5 bits so they can source any of the
+    RISC-V GPR registers.
+\item Added some more explanations / justifications in introduction,
+    concepts and state sections.
+\item Make field names consistent: If they occupy the same part of
+    the instruction, then they are called the same thing.
 \item Add BOP.cr instruction, and make XOR/AND/OR.cr instructions
     alias specific encodings of this BOP.cr.
 \end{itemize}
